fixed project background images placement on mobile

--- a/src/projects.css
+++ b/src/projects.css
@@ -156,7 +156,7 @@
     background-size: 33.5rem;
     background-repeat: no-repeat;
     background-position-x: 4rem;
-    background-position-y: 0.4rem;
+    background-position-y: 0.2rem;
     height: 25rem;
 }
 
